Wrapping Panels Fixes #149

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -286,6 +286,10 @@ section.vertical section {
   width:auto;
 }
 
+.flex-disabled nav {
+  flex-wrap: nowrap;
+}
+
 section section nav {
   flex-wrap: wrap;
 }
